--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -166,3 +166,13 @@ h5{
         }
     }
 }
+/*******************************media-query*********************************/
+@media only screen and (min-width: 300px) {
+    #navbar{
+        box-shadow: 0px 1px 7px @light-grey-color;
+    }
+    #navbar.navbar-shrink{
+        padding: 10px 0px;
+        background: @white-color;
+    }
+}
