--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -223,3 +223,13 @@ h5 {
   color: #ffffff !important;
   transition: all 0.5s ease-out;
 }
+/*******************************media-query*********************************/
+@media only screen and (min-width: 300px) {
+  #navbar {
+    box-shadow: 0px 1px 7px #5a6175;
+  }
+  #navbar.navbar-shrink {
+    padding: 10px 0px;
+    background: #ffffff;
+  }
+}
