--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -222,13 +222,47 @@ h5{
     
 
 }
+/*****************************get involved***********************************/
+#get-involved{
+    padding: 50px 0;
+    .container{
+        font-family: @muse-500-font;
+        margin-bottom: 50px;
+        .row{
+            .col-md-4{
+                img
+                {
+                    height: 150px;
+                    margin: 0 auto;
+                    display: block;
+                    margin-bottom: 30px;
+                }
+                h4{
+                    font-family: @muse-500-font;
+                    margin-bottom: 15px;
+                }
+                p{
+                    font-family: @opensans-font;
+                    line-height: 1.5;
+
+                }
+                a{
+                    margin-top: 10px;
+                }
+
+            }
+
+        }
+    }
+}
 /*******************************media-query*********************************/
 @media only screen and (min-width: 300px) {
     #navbar{
         box-shadow: 0px 1px 7px @light-grey-color;
     }
     #navbar.navbar-shrink{
-        padding: 10px 0px;
+        padding-top: 10px ;
+        padding-bottom: 10px;
         background: @white-color;
     }
 }
