--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -240,7 +240,7 @@ h5 {
 }
 #header #header-container .text-container h1,
 #header #header-container .text-container h4 {
-  color: #1e1f1e;
+  color: #fdfdfd;
   line-height: 1.5em;
 }
 #header #header-container .text-container h1 {
