--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -179,7 +179,7 @@ h5{
         .text-container{
             margin-top: 100px;
             h1,h4{
-                color: #1e1f1e;
+                color: #fdfdfd;
                 line-height: 1.5em;  
             }
             h1{
