--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -255,6 +255,56 @@ h5{
         }
     }
 }
+/********************mission***********************************************/
+#mission{
+    background-color:#565659;
+    padding: 50px 0px;
+    border-top: 1px solid darken(@white-color,10%);
+    border-bottom: 1px solid darken(@white-color,10%);
+    .container{
+        h3{
+            font-family: @muse-500-font;
+        }
+        h5{
+            font-family: @opensans-font;
+        }
+        .row{
+            .col-md-4{
+                .card{
+                    border: none;
+                    border-radius: 5px;
+                    margin-top: 50px;
+                    .icon-container{
+                        border-radius: 50%;
+                        margin: 0 auto;
+                        border: 8px solid @white-color;
+                        background: @main-color;
+                        margin-top: -45px;
+                        img{
+                            padding: 16px;
+                            width: 75px;
+                            height: 70px;
+    
+                        }
+                    }
+                    .card-body{
+                        .card-title{
+                            color: @main-color;
+                            margin-bottom: 15px;
+                            font-family: @muse-300-font;
+    
+                        }
+                        .card-text{
+                            font-family: @opensans-font;
+                            line-height: 1.5;
+                            
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 /*******************************media-query*********************************/
 @media only screen and (min-width: 300px) {
     #navbar{
