--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -302,7 +302,7 @@ h5 {
 }
 /********************mission***********************************************/
 #mission {
-  background-color: #565659;
+  background-color: #444958;
   padding: 50px 0px;
   border-top: 1px solid #e6e6e6;
   border-bottom: 1px solid #e6e6e6;
@@ -338,6 +338,24 @@ h5 {
 #mission .container .row .col-md-4 .card .card-body .card-text {
   font-family: "OpenSans", Helvetica, Arial, sans-serif;
   line-height: 1.5;
+}
+/******************members*************************/
+#members {
+  padding: 50px 50px 0 50px;
+}
+#members .container h3 {
+  font-family: "muse-500", Arial, sans-serif;
+  margin-bottom: 60px;
+}
+#members .container #members-slider img {
+  height: 100px;
+  width: 120px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+#members .container #members-slider img:hover {
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
 }
 /*******************************media-query*********************************/
 @media only screen and (min-width: 300px) {
