--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -357,6 +357,22 @@ h5 {
   transform: scale(1.1);
   transition: all 0.5s ease-in-out;
 }
+/*************events***************************/
+#event {
+  padding: 50px 0;
+  font-family: "muse-500", Arial, sans-serif;
+}
+#event .container .row .col-md-3 .card a img {
+  opacity: 0.7;
+  height: 200px;
+}
+#event .container .row .col-md-3 .card a img:hover {
+  opacity: 1;
+  transition: all 0.7 ease-in-out;
+}
+#event .container .row .col-md-3 .card .card-text {
+  line-height: 1.3;
+}
 /*******************************media-query*********************************/
 @media only screen and (min-width: 300px) {
   #navbar {
