--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -328,6 +328,32 @@ h5{
         }
     }
 }
+/*************events***************************/
+#event{
+    padding: 50px 0;
+    font-family: @muse-500-font;
+    .container{
+        .row{
+            .col-md-3{
+                .card{
+                    a{
+                        img{
+                            opacity: 0.7;
+                            height: 200px;
+                        }
+                        img:hover{
+                            opacity: 1;
+                            transition: all 0.7 ease-in-out;
+                        }
+                    }
+                    .card-text{
+                        line-height: 1.3;
+                    }
+                }
+            }
+        }
+    }
+}
 /*******************************media-query*********************************/
 @media only screen and (min-width: 300px) {
     #navbar{
