--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -362,13 +362,26 @@ h5 {
   padding: 50px 0;
   font-family: "muse-500", Arial, sans-serif;
 }
+#event .container .row {
+  margin: 20px;
+}
+#event .container .row .col-md-3 {
+  margin: 20px;
+}
+#event .container .row .col-md-3 .card {
+  height: 400px;
+  width: 200px;
+  margin-bottom: 10px;
+}
 #event .container .row .col-md-3 .card a img {
   opacity: 0.7;
   height: 200px;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
 #event .container .row .col-md-3 .card a img:hover {
   opacity: 1;
-  transition: all 0.7 ease-in-out;
+  transition: all ease-in-out;
 }
 #event .container .row .col-md-3 .card .card-text {
   line-height: 1.3;
