--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -334,16 +334,25 @@ h5{
     font-family: @muse-500-font;
     .container{
         .row{
+            margin: 20px;
             .col-md-3{
+                margin: 20px;
+               
                 .card{
+                     height: 400px;
+                     width: 200px;
+                     
+                     margin-bottom: 10px;
                     a{
                         img{
                             opacity: 0.7;
                             height: 200px;
+                            margin: 0 auto;
+                            margin-bottom: 20px;
                         }
                         img:hover{
                             opacity: 1;
-                            transition: all 0.7 ease-in-out;
+                            transition: all  ease-in-out;
                         }
                     }
                     .card-text{
