--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -334,14 +334,12 @@ h5{
     font-family: @muse-500-font;
     .container{
         .row{
-            margin: 20px;
+            margin: 50px;
             .col-md-3{
-                margin: 20px;
-               
+                margin: 50px;
                 .card{
-                     height: 400px;
-                     width: 200px;
-                     
+                     height: 350px;
+                     width: 50px;
                      margin-bottom: 10px;
                     a{
                         img{
@@ -352,7 +350,7 @@ h5{
                         }
                         img:hover{
                             opacity: 1;
-                            transition: all  ease-in-out;
+                            transition: all .7 ease-in-out;
                         }
                     }
                     .card-text{
