--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -125,6 +125,11 @@ h5{
     font-size: 14px;
     font-weight: bold;
 }
+h6{
+    font-size:7px ;
+    font-family: @muse-500-font;
+
+}
 .btn-custom{
     color: @white-color;
     background-color:@main-color;
@@ -187,6 +192,9 @@ h5{
             }
             h4{
                 font-family: @opensans-font;
+            }
+            h6{
+                color: @white-color;
             }
         }
 
@@ -332,6 +340,7 @@ h5{
 #event{
     padding: 50px 0;
     font-family: @muse-500-font;
+    margin-bottom: 30px;
     .container{
         .row{
             
@@ -359,6 +368,29 @@ h5{
                 }
             }
         }
+    }
+}
+/*******************************follow***************************************/
+#follow{
+    padding: 50px 50px 0 50px;
+    .container{
+        h3{
+            font-family: @muse-500-font;
+            margin-bottom: 20px;
+
+        }
+        
+         img{
+                height: 100px;
+                width: 120px;
+                margin: 0 auto;
+                margin-bottom: 20px;
+            }
+        img:hover{
+                transform: scale(1.1);
+                transition: all 0.5s ease-in-out;
+            }
+        
     }
 }
 /*******************************media-query*********************************/
