--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -188,6 +188,10 @@ h5 {
   font-size: 14px;
   font-weight: bold;
 }
+h6 {
+  font-size: 7px ;
+  font-family: "muse-500", Arial, sans-serif;
+}
 .btn-custom {
   color: #ffffff;
   background-color: #61c0bd;
@@ -248,6 +252,9 @@ h5 {
 }
 #header #header-container .text-container h4 {
   font-family: "OpenSans", Helvetica, Arial, sans-serif;
+}
+#header #header-container .text-container h6 {
+  color: #ffffff;
 }
 #header #footer-container {
   background-color: #f2f2f2;
@@ -361,6 +368,7 @@ h5 {
 #event {
   padding: 50px 0;
   font-family: "muse-500", Arial, sans-serif;
+  margin-bottom: 30px;
 }
 #event .container .row .col-md-3 {
   margin: 60px;
@@ -382,6 +390,24 @@ h5 {
 }
 #event .container .row .col-md-3 .card .card-text {
   line-height: 1.3;
+}
+/*******************************follow***************************************/
+#follow {
+  padding: 50px 50px 0 50px;
+}
+#follow .container h3 {
+  font-family: "muse-500", Arial, sans-serif;
+  margin-bottom: 20px;
+}
+#follow .container img {
+  height: 100px;
+  width: 120px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+#follow .container img:hover {
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
 }
 /*******************************media-query*********************************/
 @media only screen and (min-width: 300px) {
