--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -388,11 +388,40 @@ h6{
             }
         img:hover{
                 transform: scale(1.1);
-                transition: all 0.5s ease-in-out;
+                transition: all 0.5s ease-in;
             }
         
     }
 }
+/*******************************footer************************************/
+footer{
+    padding: 2px;
+    background-color:#3a3a3b ;
+    .container-fluid{
+        .college{
+            margin-bottom: -50px;
+            a{
+                color: @white-color;
+                margin-left: 20px;
+                img{
+                    height: 50px;
+                    width: 100px;
+                    margin: 0 auto;
+                    margin-bottom: 60px;
+                   } 
+                    
+
+                }
+
+            }
+            .design{
+                p{
+                    color: #efedf8;font-size: 15px;
+
+                }
+            }
+        }
+    }
 /*******************************media-query*********************************/
 @media only screen and (min-width: 300px) {
     #navbar{
