--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -433,3 +433,12 @@ footer{
         background: @white-color;
     }
 }
+@media only screen and (max-width: 414px) {
+    #header #footer-container p{
+        letter-spacing:1px;
+        line-height:1.2;
+    }
+    #get-involved .container .row .col-md-4 a{
+        margin-bottom: 30px;
+    }
+}
