--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -354,9 +354,19 @@ h6 {
   font-family: "muse-500", Arial, sans-serif;
   margin-bottom: 60px;
 }
+#members .container #staff img {
+  height: 120px;
+  width: 140px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+#members .container #staff img:hover {
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
+}
 #members .container #members-slider img {
-  height: 100px;
-  width: 120px;
+  height: 120px;
+  width: 140px;
   margin: 0 auto;
   margin-bottom: 20px;
 }
