--- a/assets/style/css/style.less
+++ b/assets/style/css/style.less
@@ -322,10 +322,24 @@ h6{
             margin-bottom: 60px;
 
         }
+        #staff{
+            img{
+                height: 120px;
+                width: 140px;
+                margin: 0 auto;
+                margin-bottom: 20px;
+   
+            }
+            img:hover{
+                transform: scale(1.1);
+                transition: all 0.5s ease-in-out;
+            }
+            
+        }
         #members-slider{
             img{
-                height: 100px;
-                width: 120px;
+                height: 120px;
+                width: 140px;
                 margin: 0 auto;
                 margin-bottom: 20px;
             }
